# fossorial

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: basic_usage.cpp
firmware/meshcore/: GopherMesh.cpp  GopherMesh.h  main.cpp  platformio.ini
firmware/meshtastic/: FossorialModule.cpp  FossorialModule.h  README.md
include/fossorial/: GopherCore.h  GopherFileSystem.h
src/: fossorial_server.cpp
test/: test_gophercore.cpp  test_gopherfilesystem.cpp
